# EchoTaskbarLyrics

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.cmd  echo-plugins.json  vcpkg.json
.github/workflows/: build.yml  release.yml
echo-taskbar-lyrics/: index.js  manifest.json
echo-taskbar-lyrics/resources/: README.md
scripts/: build.bat  pack_zip.py
src/: api_enabler.cpp  api_enabler.h  app_icon.rc  card_renderer.cpp  color_picker.cpp  color_picker.h  color_utils.h  config.cpp  config.h  config_dialog.cpp  config_dialog.h  constants.h  d2d_settings_window.cpp  d2d_settings_window.h  d2d_settings_window_controls.cpp  d2d_settings_window_input.cpp  d2d_settings_window_internal.h  d2d_settings_window_render.cpp  fullscreen_detector.cpp  fullscreen_detector.h  http_server.cpp  http_server.h  logger.cpp  logger.h  lyric_renderer.cpp  lyrics_data.h  lyrics_parser.cpp  lyrics_parser.h  main.cpp  marquee_engine.cpp  native_messaging.cpp  native_messaging.h  process_monitor.cpp  process_monitor.h  renderer.cpp  renderer.h  renderer_utils.h  settings_draw_utils.h  shell_companion.cpp  shell_companion.h  (+15 more)
tests/: test_lyrics_parser.cpp
